--- a/static/README
+++ b/static/README
@@ -324,3 +324,6 @@ org.globalbioticinteractions.taxon v0.5.3, 2024-07-24
 1. update taxonCache and taxonMap using automated scripts available via Taxon Graph Builder v0.1.2 https://github.com/globalbioticinteractions/taxon-graph-builder/releases/tag/0.1.2 and/or https://doi.org/10.5281/zenodo.12687693 . 
 
 
+org.globalbioticinteractions.taxon v0.5.4, 2025-02-12
+
+1. update taxonCache and taxonMap using automated scripts available via Taxon Graph Builder v0.1.2 https://github.com/globalbioticinteractions/taxon-graph-builder/releases/tag/0.1.2 and/or https://doi.org/10.5281/zenodo.12687693 . 
