--- a/static/README
+++ b/static/README
@@ -327,3 +327,8 @@ org.globalbioticinteractions.taxon v0.5.3, 2024-07-24
 org.globalbioticinteractions.taxon v0.5.4, 2025-02-12
 
 1. update taxonCache and taxonMap using automated scripts available via Taxon Graph Builder v0.1.2 https://github.com/globalbioticinteractions/taxon-graph-builder/releases/tag/0.1.2 and/or https://doi.org/10.5281/zenodo.12687693 . 
+
+
+org.globalbioticinteractions.taxon v0.5.4.1, 2025-12-09
+
+1. same as v0.5.4, but released to align Zenodo publication to include taxonMap.tsv.gz and other files that were missing on Zenodo, but present in the taxon graph v0.5.4 release. 
