--- a/static/README
+++ b/static/README
@@ -332,3 +332,7 @@ org.globalbioticinteractions.taxon v0.5.4, 2025-02-12
 org.globalbioticinteractions.taxon v0.5.4.1, 2025-12-09
 
 1. same as v0.5.4, but released to align Zenodo publication to include taxonMap.tsv.gz and other files that were missing on Zenodo, but present in the taxon graph v0.5.4 release. 
+
+org.globalbioticinteractions.taxon v0.5.5, 2025-12-19
+
+1. apply taxon patch 20251209-01 to remove suspicious name mappings associated with Lasioglossum (austrevylaeus) maunga as reported in https://github.com/globalbioticinteractions/globalbioticinteractions/issues/1131 . See also https://github.com/globalbioticinteractions/globi-taxon-graph-patches/tree/main/20251209-01 .
