--- a/static/README
+++ b/static/README
@@ -336,3 +336,7 @@ org.globalbioticinteractions.taxon v0.5.4.1, 2025-12-09
 org.globalbioticinteractions.taxon v0.5.5, 2025-12-19
 
 1. apply taxon patch 20251209-01 to remove suspicious name mappings associated with Lasioglossum (austrevylaeus) maunga as reported in https://github.com/globalbioticinteractions/globalbioticinteractions/issues/1131 . See also https://github.com/globalbioticinteractions/globi-taxon-graph-patches/tree/main/20251209-01 .
+
+org.globalbioticinteractions.taxon v0.6.0, 2025-12-22
+
+1. update taxonCache and taxonMap using automated scripts available via Taxon Graph Builder v0.1.4 https://github.com/globalbioticinteractions/taxon-graph-builder/releases/tag/0.1.4 and/or https://doi.org/10.5281/zenodo.18025356 .
